Integrating confirmation in registration